# taco

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  editor.sh  fips.yml  makefile  notes.txt  pprint.lua  premake5.lua  run.sh  script.lua  taco-shell.sh  test.lang  test.lua  test.script  todo.md
editor/: CMakeLists.txt  Makefile
editor/src/: editor.c
engine/: CMakeLists.txt  Makefile
engine/lib/glad/: CMakeLists.txt
engine/lib/log/: CMakeLists.txt
engine/lib/microui/: CMakeLists.txt  Makefile  premake5.lua
engine/lib/rres/: CMakeLists.txt
engine/src/: application.c  application.h  core.h  engine.c  engine.h  entrypoint.h  input.c  input.h  keycodes.h  layer.c  layer.h  scene.c  scene.h  shraybn.h  shrlog.h  shrpch.h  taco.h  tcpch.h  timestep.c  timestep.h  window.c  window.h
engine/src/containers/: darray.c  darray.h
engine/src/dbui/: dbui.c  dbui.h
engine/src/engine/: application.c  application.h  core.h  entrypoint.h  input.c  input.h  input_codes.h  keycodes.h  layer.c  layer.h  log.h  scene.c  scene.h  window.c  (+1 more)
include/: shraybn.h  shrentry.h  shrnuklear.h  types.h
packer/: CMakeLists.txt  Makefile  premake5.lua
packer/src/: packer.c  packer.h
runtime/: CMakeLists.txt  Makefile
runtime/src/: runtime.c  runtime.h  ui_layer.c
sandbox/: Makefile
sandbox/src/: sandbox.c
src/: canvas.c  canvas.h  engine.c  engine.h  image.c  image.h  main.c  script.c  script.h  window.c  window.h
taco/: Makefile
taco-shell/: Makefile
taco-shell/src/: taco_shell.c
taco/src/: taco.h  tcpch.h  toml.c  toml.h  types.h
(+66 files in other folders)
